# pong

./: CMakeLists.txt  main.cpp
include/: game.h  window.h
src/: game.cpp  window.cpp
